--- a/fullstack-fontend/src/scss/GiamGiaAdd.scss
+++ b/fullstack-fontend/src/scss/GiamGiaAdd.scss
@@ -1,7 +1,7 @@
 .modal {
-    --bs-modal-width: 800px !important
+  --bs-modal-width: 800px !important;
 }
-  
+
 $font-family: sans-serif;
 
 .App {
@@ -9,7 +9,7 @@ $font-family: sans-serif;
   text-align: center;
 }
 
-// Lựa chọn phần tử có thuộc tính aria-hidden="true"
-[aria-hidden="true"] {
-  display: none !important;
-}
+// // Lựa chọn phần tử có thuộc tính aria-hidden="true"
+// [aria-hidden="true"] {
+//   display: none !important;
+// }
