--- a/fullstack-fontend/src/scss/OderManagement.scss
+++ b/fullstack-fontend/src/scss/OderManagement.scss
@@ -2,9 +2,10 @@
   padding-bottom: 10px;
   border: 1px solid white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
+  border-radius: 15px;
   margin-bottom: 20px;
   font-size: 14px;
+  background-color: white;
   .col-4 {
     padding-top: 10px;
   }
@@ -28,11 +29,14 @@
     color: green;
     // font-weight: bold;
   }
-  .table-order-management {
-    tbody {
-      tr {
-        td {
-          border-bottom: 1px solid rgb(245, 245, 245);
+  .row.row-order-management {
+    .tableContainer {
+      width: 50px !important;
+      tbody {
+        tr {
+          td {
+            border-bottom: 1px solid rgb(245, 245, 245);
+          }
         }
       }
     }
