--- a/fullstack-fontend/src/scss/App-ADM.scss
+++ b/fullstack-fontend/src/scss/App-ADM.scss
@@ -20,25 +20,16 @@ code {
 }
 //Box
 .box {
-  background-color: rgb(243, 242, 242);
+  background-color: rgb(251, 251, 251);
 }
 //Header
 header {
-  background-color: white;
-  color: black;
-  border-radius: 30px 30px 30px 30px;
-  height: 0px;
-  width: 0px;
+  background-color: rgb(240, 240, 240);
+  .bg-body-tertiary {
+    background-color: rgb(240, 240, 240);
 
-  .header-adm {
-    background-color: white;
-    color: black;
-    border-radius: 30px 30px 30px 30px;
-    height: 50px;
-    width: 400px;
-    padding-bottom: 50px;
-    .avater {
-      font-size: 15px;
+    .d-flex {
+      background-color: rgb(240, 240, 240);
     }
   }
 }
@@ -75,7 +66,7 @@ header {
   }
   .tree-link-adm {
     // height: 1000px;
-    background-color: white;
+    background-color: rgb(240, 240, 240);
     color: black;
   }
 
