--- a/fullstack-fontend/src/scss/OderManagement.scss
+++ b/fullstack-fontend/src/scss/OderManagement.scss
@@ -6,6 +6,8 @@
   margin-bottom: 20px;
   font-size: 14px;
   background-color: white;
+  padding-right: 10px;
+  padding-left: 10px;
   .col-4 {
     padding-top: 10px;
   }
@@ -31,7 +33,6 @@
   }
   .row.row-order-management {
     .tableContainer {
-      width: 50px !important;
       tbody {
         tr {
           td {
