--- a/fullstack-fontend/src/scss/OderManagement.scss
+++ b/fullstack-fontend/src/scss/OderManagement.scss
@@ -31,15 +31,15 @@
     color: green;
     // font-weight: bold;
   }
-  .row.row-order-management {
-    .tableContainer {
-      tbody {
-        tr {
-          td {
-            border-bottom: 1px solid rgb(245, 245, 245);
-          }
+  // .row.row-order-management {
+  .tableContainer {
+    tbody {
+      tr {
+        td {
+          border-bottom: 1px solid rgb(245, 245, 245);
         }
       }
     }
   }
+  // }
 }
