--- a/fullstack-fontend/src/scss/GiamGiaAdd.scss
+++ b/fullstack-fontend/src/scss/GiamGiaAdd.scss
@@ -10,6 +10,10 @@ $font-family: sans-serif;
 }
 
 // Lựa chọn phần tử có thuộc tính aria-hidden="true"
-[aria-hidden="true"] {
+div.mb-3[aria-hidden="true"] {
   display: none !important;
+}
+
+.css-6s1xft-MuiGrid-root {
+  display: block !important;
 }
