--- a/fullstack-fontend/src/scss/OderManagement.scss
+++ b/fullstack-fontend/src/scss/OderManagement.scss
@@ -11,8 +11,9 @@
   .col-4 {
     padding-top: 10px;
   }
-  .col-6 {
-    padding-top: 10px;
+
+  .col-5 {
+    padding-top: 13px;
     align-items: center;
 
     label {
@@ -26,6 +27,9 @@
       padding: 0;
       font-size: 14px;
     }
+  }
+  .col-2 {
+    padding-bottom: 10px;
   }
   .select-green {
     color: green;
