--- a/fullstack-fontend/src/scss/ImgSanPham.scss
+++ b/fullstack-fontend/src/scss/ImgSanPham.scss
@@ -1,25 +1,14 @@
-.App {
-  text-align: center;
-  padding: 2rem;
-}
-
-.dropzone {
-  border: 2px dashed #ccc;
-  padding: 1rem;
-  text-align: center;
-  cursor: pointer;
-}
-
-.selected-files {
-  margin-top: 2rem;
-}
-
-.selected-file {
+.card-content {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  margin: 0.5rem 0;
 }
 
-.file-icon {
-  margin-right: 0.5rem;
+.dropzone-input {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.dropzone-icon {
+  margin-top: 10px;
 }
