--- a/fullstack-fontend/src/scss/TableGiamGiaScss.scss
+++ b/fullstack-fontend/src/scss/TableGiamGiaScss.scss
@@ -10,6 +10,24 @@
   margin: 25px !important;
 }
 
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.sale-tag {
+  position: absolute;
+  top: 10px;
+  right: 10px; /* Đặt thẻ "Sale" ở phía bên phải */
+  background-color: #e74c3c;
+  color: white;
+  padding: 5px;
+  font-size: 12px;
+  border-radius: 4px;
+  transform: rotate(-20deg);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
 
 .row-order-management {
   padding-bottom: 10px;
