--- a/material-kit-react-main/material-kit-react-main/src/scss/OrderManagement-Timeline.scss
+++ b/material-kit-react-main/material-kit-react-main/src/scss/OrderManagement-Timeline.scss
@@ -2,7 +2,7 @@
   padding-bottom: 10px;
   border: 1px solid white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
+  border-radius: 10px;
   margin-bottom: 20px;
   font-size: 14px;
 
@@ -15,9 +15,9 @@
     margin-top: 10px;
     border-bottom: 1px solid #000; // You can use "#000" for black color
 
-    h6 {
-      font-size: 18px;
-    }
+    // h6 {
+    //   font-size: 18px;
+    // }
     .button-edit {
       text-align: right;
       margin-bottom: 5px;
