--- a/material-kit-react-main/src/scss/GiamGiaAdd.scss
+++ b/material-kit-react-main/src/scss/GiamGiaAdd.scss
@@ -17,6 +17,20 @@ div.mb-3[aria-hidden="true"] {
 .css-6s1xft-MuiGrid-root {
   display: block !important;
 }
+
+.content-left, .content-right {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  padding: 24px;
+}
+
+.m-25 {
+  padding: 20px !important;
+}
+
+.info-discount {
+  font-size: 20px;
+  font-weight: 600;
+}
 // // Lựa chọn phần tử có thuộc tính aria-hidden="true"
 // [aria-hidden="true"] {
 //   display: none !important;
