--- a/material-kit-react-main/src/scss/Home.scss
+++ b/material-kit-react-main/src/scss/Home.scss
@@ -28,12 +28,11 @@
   }
   .carousel .carousel-control-next {
     margin-left: 0px;
-    padding-left: 100px; /* Điều chỉnh khoảng cách tại đây */
-    /* Các kiểu dáng khác của nút */
+    padding-left: 100px;
   }
 }
 .carousel .carousel-inner .carousel-item {
-  height: 270px;
+  height: 400px;
 }
 //Section 3
 .section3 {
