--- a/material-kit-react-main/src/scss/Cart-shopping.scss
+++ b/material-kit-react-main/src/scss/Cart-shopping.scss
@@ -30,3 +30,28 @@
     z-index: 2;
     bottom: 0;
 }
+
+.delete-product-btn,
+.container-product-price {
+    margin: 0;
+}
+
+.soluong-number-btn {
+    padding: 0;
+}
+
+.container-product-sotien {
+    width: auto;
+}
+
+.margin-product-cart {
+    
+}
+
+.container-product-checkbox {
+    margin: 0;
+}
+
+.mr-45 {
+    margin-right: 50px;
+}
