Checkbox select + tổng tiền (Merge cái này nè) {14:10 19/11/23}

--- a/material-kit-react-main/src/scss/Cart-shopping.scss
+++ b/material-kit-react-main/src/scss/Cart-shopping.scss
@@ -55,3 +55,29 @@
 .mr-45 {
     margin-right: 50px;
 }
+
+.mr-15 {
+    margin-right: 15px;
+}
+
+.boder-button {
+    border: 1px solid;
+}
+
+.ml-15 {
+    margin-left: 15px;
+}
+
+.product-divider {
+    margin-bottom: 20px; /* Điều chỉnh khoảng cách theo ý muốn */
+}
+
+.delete-product-btn:hover {
+    opacity: 0.8;
+    border: 1px solid #000;
+}
+
+.w-45 {
+    width: 45%;
+}
+  
